# QPrism

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo_audio.ipynb  demo_sensor.py  demo_video.ipynb  paper.md  pyproject.toml  requirements.txt  video_metrics.csv
Audio/: audio_paths.py  punctuator.py
Audio/Specific/: audio_classification.py  audio_length.py  audio_sample_rate.py  mp3_to_wav.py  speechtotext.py
QPrism/Audio/: Audio.py  DQM.py  audio_rms.py  to_dataframe.py
QPrism/Sensor/: APD.py  DQM.py  IRLR.py  MDR.py  RLC.py  SCR.py  SNR.py  SRC.py  VDR.py  VRC.py  data_processing.py  load_data.py
QPrism/Sensor/pipeline_functions/: activity_classifcation.py  outlier_detection.py  signal_to_noise.py  single_function_DQMs.py
QPrism/Video/: DQM.py  Video.py  bit_rate.py  brightness.py  creation_time.py  object_detection.py  video_length.py
Video/: video_format.py  video_resolution.py
Video/Specific/: object_detection.py
data/sensor/generated_testing_data/: APD_0.1.csv  APD_0.csv  IRLR_0std.csv  IRLR_single_row.csv  IRLR_wrong_timestamp.csv  MDR_0.4_missing.csv  RLC_20_rows.csv  (+12 more)
docs/: Audio_DQM.rst  DQM_multiple_file.rst  DQM_single_file.rst  Video_DQM.rst  api.rst  conf.py  glossary.rst  index.rst  inplementation.rst  overview.rst  sensor_helper.rst  usage.rst
docs/source/: index.rst
modules/: __init__.py
modules/Audio/: Audio.py  audio_classification.py  audio_length.py  audio_rms.py  audio_to_array.py  extract_audios.py  mp3_to_wav.py  noise_reduction.py  snr.py  spectral_centroid.py  spectrogram.py  speechtotext.py
modules/Sensor/: APD.py  DQM.py  IRLR.py  MDR.py  RLC.py  SCR.py  SNR.py  SRC.py  VDR.py  VRC.py  WASH_MDR_analysis.py  data_processing.py  demo.py  load_data.py
modules/Video/: Video.py  artifacts.py  brightness.py  creation_time.py  frame_rate.py  object_detection.py  video_length.py  video_resolution.py
modules/helpers/: download.py
paper/: paper.bib  paper.md
tests/Audio/: audio_demo.ipynb  demo_audio.ipynb
tests/Sensor/: APD_testing.ipynb  Demo_WASH.ipynb  Demo_WASH_multi_file.ipynb  Demo_WASH_single_file.ipynb  Demo_multi_file.ipynb  Demo_single_file.ipynb  IRLR_testing.ipynb  MDR_testing.ipynb  Non_numerical_record.ipynb  RLC_testing.ipynb  SCR_testing.ipynb  SNR_testing.ipynb  SRC_testing.ipynb  VDR_testing.ipynb  VRC_testing.ipynb  demo_sensor.py  multi_file_Demo.ipynb  multi_record_Demo.ipynb  single_file_Demo.ipynb  single_record_Demo.ipynb
tests/Video/: demo_video.ipynb  video_demo.ipynb
(+29 files in other folders)
